k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  labels:
    app: flask-app
spec:
  type: ClusterIP
  ports:
    - port: 80       
      targetPort: 5000 
      protocol: TCP
      name: http
    - port: 8080     
      targetPort: 5000 
      protocol: TCP
      name: metrics 
  selector:
    app: flask-app
